# Hanabi-Alphabet-Soup

./: .gitignore  CMakeLists.txt  Hanabi.dev  Hanabi.layout  Makefile.win  README.md  functions.h  interface.h  lab.h  main.c  save.txt
Hanabi - C++/: Hanabi.cpp  Hanabi.vcxproj  Hanabi.vcxproj.filters  interface.h  save.txt
Hanabi - C++/Debug/: Hanabi.ilk  hanabi.obj.enc  vc142.idb
Hanabi - Visual Studio/: Hanabi.cpp  Hanabi.sln  Hanabi.vcxproj  functions.h  lab.h
Letras/: Letras.c
Sopa de letras/: Sopa de letras.sln
Sopa de letras/Debug/: Sopa de letras.ilk
Sopa de letras/Sopa de letras/: Beginner.cpp  Beginner.h  Board.cpp  Board.h  Easy_Board.cpp  Easy_Board.h  Expert.cpp  Expert.h  Game.cpp  Game.h  Hard_Board.cpp  Hard_Board.h  Jogador.cpp  Jogador.h  Jogo.cpp  Jogo.h  Letra.cpp  Letra.h  Letter.cpp  Letter.h  Palavra.cpp  Palavra.h  Player.cpp  Player.h  Point.cpp  Point.h  Ponto.cpp  Ponto.h  Sopa de letras.vcxproj  Sopa de letras.vcxproj.filters  Tabuleiro.cpp  Tabuleiro.h  Word.cpp  Word.h  distritos.txt  functions.cpp  functions.h  lista.txt  main.cpp  save.txt
Sopa_Windows/: Sopa_Windows.sln
Sopa_Windows/Sopa_Windows/: Board.cpp  Board.h  Game.cpp  Game.h  Letter.cpp  Letter.h  Player.cpp  Player.h  Point.cpp  Point.h  Sopa_Windows.aps  Sopa_Windows.cpp  Sopa_Windows.rc  Sopa_Windows.vcxproj  Sopa_Windows.vcxproj.filters  Word.cpp  Word.h  framework.h  resource.h
src/: bot.c  bot.h  card.c  card.h  deck.c  deck.h  game.c  game.h  hand.c  hand.h  interface.c  interface.h  lab.c  lab.h  main.c  player.c  player.h  rules.txt
src/hanabi/: bot.c  (+13 more)
(+53 files in other folders)
